# EdgeService

./: .gitignore  CMakeLists.txt  README.md
FLOW/: sys_sn
cmake/: hisi.cmake  x86.cmake
config/: default_config.json  service_default.json
dependencies/: build_from_source.sh  mini_build_from_source.sh
dependencies/x86/include/json/: writer.h
include/: AlgoObject.h  MetaObject.h  SolutionPipeline.h  common.h  init.h  util.h
include/app/: ServiceDaemon.h
include/event/: Event.h
include/mgr/: ConfigureManager.h  ObjectManager.h  QueueManager.h
include/network/: HttpClient.h
include/node/: DataLoaderNode.h  DetectorNode.h  DispatchNode.h  DynamicFactory.h  FlowRpcAsynNode.h  MonitorNode.h  Node.h  head.h
modules/: CMakeLists.txt
modules/infer_engine/: CMakeLists.txt
modules/infer_engine/include/: ie_blob.hpp  ie_engine.hpp  ie_errcode.hpp  ie_params.hpp  ie_preprocess.hpp  infer_engine_api.h
modules/infer_engine/include/engine/: engine_nnie.hpp  engine_rknn.hpp  engine_tengine.hpp
modules/infer_engine/src/: ie_engine.cpp  ie_errcode.cpp  ie_preprocess.cpp  infer_engine_api.cpp
modules/infer_engine/src/engine/: engine_nnie.cpp  engine_rknn.cpp  engine_tengine.cpp
src/: SolutionPipeline.cpp  common.cpp  init.cpp  util.cpp
src/app/: ServiceDaemon.cpp  main.cpp
src/event/: Event.cpp
src/mgr/: ConfigureManager.cpp
src/network/: HttpClient.cpp
src/node/: DataLoaderNode.cpp  DetectorNode.cpp  DispatchNode.cpp  FlowRpcAsynNode.cpp  LocalVideoLoaderNode.cpp  MonitorNode.cpp  Node.cpp  RtspLoaderNode.cpp  UsbDeviceLoaderNode.cpp
